# auto_pvp

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
_data/: restrain_calc.js
_db/: data.db  pvp.db
_docs/: compiler_v2_static_architecture.md  damage-formula.md  effect_family_audit.md  pak_refresh_pipeline.md  pak_schema_audit.md  phase4_dataization_boundaries.md  phase4_mark_tag_map_audit.md  phase5_active_buff_lifecycle.md  phase5c_ii_cuxu_family_audit.md  phase5e_ack_census.md  static_data_audit_design.md
_proto/: README.md  battle_buff_data.proto  battle_data.proto  battle_proto.proto  com_battle.proto  com_battle_enum.proto  com_pet.proto  com_pet_skill.proto  xls_enum.proto
scripts/: battle.py  battle_config.py  build_db.py  damage.py  fetch_details.py  fetch_index.py  fetch_teams.py  import_db.py  migrate.py  monte_carlo.py  parse_pak.py  parse_pets.py  parse_skills.py  parse_teams.py  parse_yinji.py  utils.py
tests/: test_ability_flags_codegen.py  test_active_buff_immunity.py  test_active_buff_lifecycle.py  test_active_response.py  test_battle.py  test_bindata_coverage_audit.py  test_buff_immunity.py  test_buffbase_order_axis.py  test_buffbase_params_codegen.py  test_compiler_v2_static.py  test_counter.py  test_damage.py  test_data_pipeline.py  test_effect_families.py  test_effect_gap_acknowledgements.py  test_effects.py  test_engine_pipeline.py  test_events.py  test_family_axes.py  test_handler_collector.py  test_kernel.py  test_pak_query.py  test_pak_schema_audit.py  test_refresh_artifacts.py  test_runtime_actions.py  test_type_chart.py  (+3 more)
(+361 files in other folders)
