[project]
name = "auto-pvp"
version = "0.2.0"
description = "Roco Kingdom PVP Battle Simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
roco-mc = "roco.sim.monte_carlo:main"
roco-fetch = "roco.data.fetch_index:main"
roco-compile-kernel = "roco.data.compile_kernel_catalog:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
