[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-pvp"
version = "0.2.0"
description = "Roco Kingdom PVP Battle Simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["roco"]

[project.scripts]
roco-mc = "roco.sim.monte_carlo:main"
roco-fetch-teams = "roco.data.fetch_teams:main"
roco-refresh-artifacts = "roco.data.refresh_artifacts:main"
roco-compile-static = "roco.compiler_v2.gen_prefix_map:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
